test: fixed include path

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_executable(test_sendrecv send_recv.cpp)
-target_link_libraries(test_sendrecv sampik Kokkos::kokkos MPI::MPI_CXX)
+add_executable(send_recv send_recv.cpp)
+target_include_directories(send_recv PUBLIC ../src)
+target_link_libraries(send_recv sampik Kokkos::kokkos MPI::MPI_CXX)
