Start restructuring project layout
This change follows proposition P1204R0 from WG21 (see https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p1204r0.html)

--- a/sampik/CMakeLists.txt
+++ b/sampik/CMakeLists.txt
@@ -17,25 +17,5 @@
 #
 # Author: Gabriel Dos Santos <gabriel.dossantos@cea.fr, dss.gabriel@protonmail.com>
 
-cmake_minimum_required(VERSION 3.16)
-project(sampik LANGUAGES CXX DESCRIPTION "SAMPIK: Simple API for MPI + Kokkos")
-
-set(CMAKE_COLOR_DIAGNOSTICS ON)
-
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 20)
-  set(CMAKE_CXX_STANDARD_REQUIRED ON)
-  message(STATUS "setting C++ standard to C++${CMAKE_CXX_STANDARD}")
-endif()
-
-if(CMAKE_BUILD_TYPE EQUAL Debug)
-    add_compile_options(-Wall -Wextra -Wpedantic -Wconversion -fanalyzer)
-endif()
-
-set(TOP_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
-set(SAMPIK_DIR "${TOP_DIR}/sampik")
-
-find_package(MPI REQUIRED)
-add_subdirectory(ext/kokkos)
-
-add_subdirectory(${SAMPIK_DIR})
+add_subdirectory(sampik)
+add_subdirectory(impl)
