--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,8 @@ if(CMAKE_BUILD_TYPE EQUAL Debug)
     add_compile_options(-Wall -Wextra -Wpedantic -Wconversion -fanalyzer)
 endif()
 
+include(GNUInstallDirs)
+
 find_package(MPI REQUIRED)
 add_subdirectory(ext/kokkos)
 
