tests: Fix link to MPI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(CMAKE_COLOR_DIAGNOSTICS ON)
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 20)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
-  message(STATUS "setting C++ standard to C++${CMAKE_CXX_STANDARD}")
+  message(STATUS "Setting C++ standard to C++${CMAKE_CXX_STANDARD}")
 endif()
 
 if(CMAKE_BUILD_TYPE EQUAL Debug)
